--- a/views/signin.jade
+++ b/views/signin.jade
@@ -18,11 +18,11 @@
             li
                 i.icon-angle-right
                 a(href="/thread/new")
-                    |发帖子
-            li
-                i.icon-angle-right
-                a(href="#")
-                    | 我的关注
+                    | 发表新话题
+            //- li
+            //-     i.icon-angle-right
+            //-     a(href="#")
+            //-         | 我的关注
             li
                 i.icon-angle-right
                 a(href="http://#{site.duoshuo.short_name}.duoshuo.com/logout/?sso=1&redirect_uri=#{href}/signout").signout 登出
