--- a/views/banner.jade
+++ b/views/banner.jade
@@ -1,11 +1,6 @@
 .banner.clearfix
     .inner.clearfix.container
        .row
-            .col-lg-9
+            .col-lg-12
                 h2.title 唾手即得，只若初见。
-                .desc 
-                    p #{site.name} 为你和你的朋友们营造一个简易，优雅的社区。
-                    p 你可以通过右侧的社交网络登录到 #{site.name} 参与讨论节点的帖子、活动，
-                    p 甚至关注你所感兴趣的话题
-            .col-lg-3.social
-                include signin
+                    span.desc #{site.name} 为你和你的朋友们营造一个简易，优雅的社区。你可以参与讨论节点的帖子、活动，甚至关注你所感兴趣的话题。
