--- a/views/search.jade
+++ b/views/search.jade
@@ -1,5 +1,6 @@
-.search
-    .input-group(ng-controller="candy.ctrlers.search")
+.search(ng-controller="candy.ctrlers.search")
+    form#topSearch
+      .input-group
         input(type="text",ng-model="search.keyword").form-control
         .input-group-btn
             a.btn.btn-primary(href="#",ng-click="search()")
