更新个人中心

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1172,6 +1172,15 @@ img.avatar-micro {
     .thumbnail();
 }
 
+img.avatar-mid {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #ddd;
+    padding: 1px;
+    margin: 0px 4px;
+    .thumbnail();
+}
+
 .thread {
     form {
         margin: 0;
@@ -1199,4 +1208,8 @@ img.avatar-micro {
         }
         
     }
+}
+
+i.icon-spinner {
+    padding: 0 !important;
 }
