--- a/views/signin.jade
+++ b/views/signin.jade
@@ -13,7 +13,7 @@
                         | #{site.name} 管理后台
             li
                 i.icon-angle-right
-                a(href="/mime")
+                a(href="/member/#{user._id}")
                     | 我的 #{site.name}
             li
                 i.icon-angle-right
