更新发帖编辑器

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -745,15 +745,8 @@ footer {
     }
 }
 /*sidebar*/
-.side-title {
-    font-size: 12px;
-    color: #999;
-    margin-bottom: 10px;
-    font-weight: normal;
-    padding: 0px 10px;
-    margin-top: 5px;
-}
-.side-cnt {
+
+.side-cnt,.mime-block {
     background-color: #fff;
     border: 1px solid #ddd;
     padding: 10px 0px;
@@ -761,6 +754,14 @@ footer {
     text-shadow: 1px 1px 2px #fff;
     overflow: hidden;
     position: relative;
+    .title {
+        font-size: 12px;
+        color: #999;
+        margin-bottom: 10px;
+        font-weight: normal;
+        padding: 0px 10px;
+        margin-top: 5px;
+    }
     input[type=text] {
         border: 1px solid #ddd;
         padding: 3px;
@@ -1212,4 +1213,14 @@ img.avatar-mid {
 
 i.icon-spinner {
     padding: 0 !important;
+}
+
+h3.syncing {
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    color: #444;
+    padding: 20px 0;
+    line-height: 1;
+    margin: 0;
 }
