--- a/views/mime.jade
+++ b/views/mime.jade
@@ -16,18 +16,19 @@ block banner
 block content
     - if (user)
         - if (user._id == uu._id)
-            #sync.clearfix.mime
-                - if (!user.nickname)
-                    h3.syncing
-                        i.icon-spinner.icon-spin.icon-large
-                        | 正在同步您的数据，请勿关闭本页面...
-                - else
-                    h3 我最近发布的主题
-            .ds-demo.fn-clear.fn-hide
-                .ds-thread
+            - if (!user.nickname)
+              #sync.clearfix.mime-block
+                h3.syncing
+                    i.icon-spinner.icon-spin.icon-large
+                    | 正在同步您的数据，请勿关闭本页面...
+                .ds-demo.fn-clear.fn-hide
+                    .ds-thread
+            - else
+                #recent.mime-block
+                    h3.title 我最近发布的主题
         - else
-            .mime
-                h3 #{uu.nickname} 最近发布的主题
+            #recent.mime-block
+                h3.title #{uu.nickname} 最近发布的主题
 block js
     - if (user)
         - if (user._id == uu._id)
