忘了提交css，补上

--- a/views/banner.jade
+++ b/views/banner.jade
@@ -2,5 +2,5 @@
     .inner.clearfix.container
        .row
             .col-lg-12
-                h2.title 唾手即得，只若初见。
-                    span.desc #{site.name} 为你和你的朋友们营造一个简易，优雅的社区。你可以参与讨论节点的帖子、活动，或者关注你所感兴趣的话题。
+                h2.title 简而未减，只若初见。
+                    span.desc #{site.name} 为你和你的朋友们营造一个简洁，优雅的社区。你可以参与讨论节点的帖子、活动，或者关注你所感兴趣的话题。
