--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1224,3 +1224,12 @@ h3.syncing {
     line-height: 1;
     margin: 0;
 }
+
+.not-found {
+    h3 {
+        font-size: 40px;
+    }
+    span {
+        font-size: 14px;
+    }
+}
