--- a/views/index.jade
+++ b/views/index.jade
@@ -6,17 +6,20 @@ block content
             - each thread in threads
                 .pub-main.lz-board
                     .single-pub.clearfix
-                        .avatar
-                            img(src="#{thread.lz.avatar}")
+                        - if (thread.lz.avatar)
+                            .avatar
+                                a(href="/member/#{thread.lz.id}")
+                                    img(src="#{thread.lz.avatar}")
                         h4.title
                             a(href="/thread/#{thread.id}") #{thread.name}
                         .author
-                            span.name #{thread.lz.nickname ? thread.lz.nickname : thread.lz.duoshuo.user_id}
+                            span.name 
+                                a(href="/member/#{thread.lz.id}") #{thread.lz.nickname ? thread.lz.nickname : thread.lz.duoshuo.user_id}
                             span.cat
                                 i.icon-chevron-right
                                 a(href="/board/#{thread.board.url}") #{thread.board.name}
                             i.icon-time
-                            |#{thread.pubdate}
+                            | #{thread.pubdate}
                     .board-meta.clearfix
                         span.views
                             i.icon-eye-open
