--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -397,6 +397,9 @@ header {
             ol {
                 padding-left: 20px;
             }
+            pre {
+                margin: 10px 0 14px;
+            }
         }
         .title {
             font-size: 18px;
