--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -848,6 +848,29 @@ footer {
             padding: 1px;
         }
     }
+    .pub-list {
+        border-top: 1px solid #ddd;
+        margin-top: 10px;
+        padding-top: 15px;
+    }
+    .single-pub {
+        padding: 12px 0;
+        h4 {
+            margin: 0;
+            line-height: 1;
+            a {
+                font-size: 14px;
+                i.icon-chevron-right {
+                    color: @key-color;
+                }
+            }
+        }
+        span {
+            padding-left: 10px;
+            font-size: 12px;
+            color: #999;
+        }
+    }
 }
 /* sugars */
 .tra (@second:0.25s) {
